Fix body jumping left when modals open

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -12,6 +12,7 @@ html {
 body {
     margin-bottom: 60px;
     font-family: 'Roboto', sans-serif !important;
+    padding-right: 0px !important;
 }
 
 p {
